# inferdoctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  RELEASE_REPORT.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: beginner_guide.md  getting_started.md  hardware_and_model_fit.md  i18n.md  launch_post.md  local_ai_stacks.md  model_fit.md  openai_compatible_endpoints.md  pypi_release.md  recommendations.md  release_checklist.md  roadmap.md  template_projects.md  template_registry.md  templates.md
docs/launch_posts/: README.md  chinese_linkedin_wechat.md  english_github_launch.md  japanese_qiita_zenn.md  short_x_post.txt
docs/performance/: customer_experience_checklist.md  demo_readiness.md  local_ai_user_experience.md  metric_definitions.md  performance_reports.md  rag_latency.md  troubleshooting_slow_responses.md  ttft_tps_streaming.md
docs/promotion/: README.md  github_release_v0.3.0.md  launch_checklist.md  linkedin_en.md  linkedin_zh.md  qiita_zenn_ja.md  show_hn.md  x_posts.md
docs/releases/: v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md
docs/workflows/: customer_service_chatbot.md  dify_local_rag_starter.md  dify_rag_debugging.md  local_document_qa.md  local_openai_compatible_api.md  ollama_openwebui_starter.md  ollama_to_openwebui.md  openwebui_local_chat_starter.md  restaurant_ordering_assistant.md
examples/: console_cpu_only.txt  console_with_gpu.txt  console_with_ollama.txt  demo_capacity.txt  demo_explain.txt  demo_health_dashboard.txt  demo_profile.md  demo_scenarios.txt  demo_top_fixes.txt  report_cpu_only.json  report_cpu_only.md  scenario_readiness.txt
examples/demo_outputs/: bootstrap_dry_run_customer_service.txt  capacity.txt  health_check.txt  model_fit_14b_q4_24gb.txt  recommend_customer_service.txt  stack_plan_customer_service.txt  template_smoke_test_customer_service.txt  template_validate_customer_service.txt
examples/templates/: bootstrap_customer_service_demo.md  dify_rag_demo.md  (+8 more)
inferdoctor/: __init__.py  __main__.py  cli.py  i18n.py
scripts/: generate_demo_outputs.sh
tests/: test_capacity.py  test_cli.py  test_config.py  test_cuda.py  test_docker.py  test_endpoint_safety.py  test_endpoints.py  test_experience.py  test_explain.py  test_health.py  test_http.py  test_i18n.py  test_model_fit.py  test_nvidia.py  test_ollama.py  test_openai_compatible.py  test_optimization_plan.py  test_optimize.py  test_perf.py  test_perf_baseline.py  test_perf_compare.py  test_profile.py  test_quickstart.py  test_recommendations.py  test_reference_apps.py  test_runner_reporters.py  test_scenarios.py  test_setup.py  test_stack_plan.py  test_system.py  test_template_quality.py  test_template_validation.py  test_templates.py
(+60 files in other folders)
