[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "inferdoctor"
version = "0.5.0"
description = "Local AI stack doctor and setup assistant."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "InferDoctor contributors" },
]
keywords = [
  "ai",
  "cuda",
  "diagnostics",
  "dify",
  "inference",
  "nvidia",
  "ollama",
  "sglang",
  "vllm",
  "xinference",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/anguoyang/inferdoctor"
Repository = "https://github.com/anguoyang/inferdoctor"
Issues = "https://github.com/anguoyang/inferdoctor/issues"
Changelog = "https://github.com/anguoyang/inferdoctor/releases"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7",
  "twine>=5",
]

[project.scripts]
inferdoctor = "inferdoctor.cli:main"

[tool.setuptools.packages.find]
include = ["inferdoctor*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
